# sdsscore

./: .gitmodules  README.md  pyproject.toml  ruff.toml  update.sh
apo/sdHdrfix/: sdHdrFix-59570.par  sdHdrFix-59575.par  sdHdrFix-59604.par  sdHdrFix-59605.par  sdHdrFix-59607.par  sdHdrFix-59623.par  sdHdrFix-59669.par  sdHdrFix-59670.par  sdHdrFix-59671.par  sdHdrFix-59683.par  sdHdrFix-59690.par  sdHdrFix-59702.par  sdHdrFix-59789.par  sdHdrFix-59797.par  sdHdrFix-59953.par  sdHdrFix-59954.par  sdHdrFix-59957.par  sdHdrFix-59982.par  sdHdrFix-60061.par  sdHdrFix-60087.par  sdHdrFix-60224.par  sdHdrFix-60232.par  sdHdrFix-60234.par  sdHdrFix-60259.par  sdHdrFix-60281.par  sdHdrFix-60323.par  sdHdrFix-60327.par  sdHdrFix-60342.par  sdHdrFix-60363.par  sdHdrFix-60364.par  sdHdrFix-60371.par  sdHdrFix-60391.par  sdHdrFix-60614.par  sdHdrFix-60662.par  sdHdrFix-60669.par  sdHdrFix-60702.par  sdHdrFix-60722.par  sdHdrFix-60789.par  sdHdrFix-60797.par  sdHdrFix-60811.par  (+18 more)
clean/: apo1m_clean_archive  apo_clean_archive  apo_clean_ics  apo_clean_raw  lco_clean_archive  lco_clean_ics  lco_clean_raw
lco/sdHdrfix/: sdHdrFix-60006.par  sdHdrFix-60007.par  sdHdrFix-60008.par  sdHdrFix-60009.par  sdHdrFix-60011.par  sdHdrFix-60013.par  sdHdrFix-60014.par  sdHdrFix-60027.par  sdHdrFix-60048.par  sdHdrFix-60052.par  sdHdrFix-60053.par  sdHdrFix-60063.par  sdHdrFix-60064.par  sdHdrFix-60065.par  sdHdrFix-60095.par  sdHdrFix-60096.par  sdHdrFix-60104.par  sdHdrFix-60127.par  sdHdrFix-60151.par  sdHdrFix-60193.par  sdHdrFix-60196.par  sdHdrFix-60232.par  sdHdrFix-60237.par  sdHdrFix-60261.par  sdHdrFix-60263.par  sdHdrFix-60272.par  sdHdrFix-60279.par  sdHdrFix-60293.par  sdHdrFix-60296.par  sdHdrFix-60310.par  sdHdrFix-60312.par  sdHdrFix-60318.par  sdHdrFix-60325.par  sdHdrFix-60326.par  sdHdrFix-60328.par  sdHdrFix-60333.par  sdHdrFix-60334.par  sdHdrFix-60339.par  sdHdrFix-60340.par  sdHdrFix-60343.par  (+68 more)
python/sdsscore/: __main__.py  confsummary.py  database.py  guider.py  telemetry.py
