[project]
name = "sdsscore"
version = "0.1.0"
description = "Bookkeeping and operations files for SDSS observations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.7",
    "astroquery>=0.4.10",
    "esutil>=0.6.16",
    "numpy>1,<2",
    "polars>=1.32.2",
    "psycopg2-binary>=2.9.10",
    "pydl>=1.0.1",
    "sdss-target-selection>=1.4.4",
    "sdsstools>=1.9.1",
    "typer>=0.16.0",
]

[project.scripts]
sdsscore = "sdsscore.__main__:app"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipython>=8.0.0",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
unfixable = ["F841"]
exclude = ["typings/"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["sdsscore"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "sdssdb", "target_selection"]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "sdsscore"
module-root = "python"
